VAL-145 testing POC to demonstrate JSON usage

--- a/pdf-validator-parent/pdf-validator-webservice/pom.xml
+++ b/pdf-validator-parent/pdf-validator-webservice/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>pdf-validator-parent</artifactId>
         <groupId>eu.europa.ec.joinup.sd-dss</groupId>
-        <version>1.0.1.RC1</version>
+        <version>2.0.1.SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -23,6 +23,27 @@
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 			<artifactId>dss-webservices</artifactId>
 		</dependency>
+
+        <!-- Spring Boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- JSON -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
