--- a/helper-scripts.conf.sample
+++ b/helper-scripts.conf.sample
@@ -1,6 +1,5 @@
 USERNAME='john.smith'
 PASSWORD='password'
-JIRA_URL_PREFIX='s/^/https:\/\/jira.sk.ee\/browse\//'
 
-TOMCAT_VERSION=7.0.65
-PDF_VALIDATOR_VERSION=1.0.1.RC1
+TOMCAT_VERSION=7.0.68
+PDF_VALIDATOR_VERSION=2.0.1.SNAPSHOT
