--- a/pdf-validator-parent/pdf-validator-keystore-generator/pom.xml
+++ b/pdf-validator-parent/pdf-validator-keystore-generator/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>pdf-validator-parent</artifactId>
         <groupId>eu.europa.ec.joinup.sd-dss</groupId>
-        <version>1.0.1.RC1</version>
+        <version>2.0.1.SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
