--- a/pdf-validator-parent/pdf-validator-test/pom.xml
+++ b/pdf-validator-parent/pdf-validator-test/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 		<artifactId>pdf-validator-parent</artifactId>
-		<version>1.0.1.RC1</version>
+		<version>2.0.1.SNAPSHOT</version>
 	</parent>
 
 	<name>PDF validator acceptance tests</name>
@@ -39,7 +39,12 @@
             <artifactId>mockito-all</artifactId>
 			<scope>test</scope>
         </dependency>
-		
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+
 		<!-- Logging -->
 		<dependency>
             <groupId>commons-logging</groupId>
