--- a/pdf-validator-parent/pdf-validator-webapp/pom.xml
+++ b/pdf-validator-parent/pdf-validator-webapp/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 		<artifactId>pdf-validator-parent</artifactId>
-		<version>1.0.1.RC1</version>
+		<version>2.0.1.SNAPSHOT</version>
 	</parent>
 
 	<artifactId>pdf-validator-webapp</artifactId>
