VAL-133 Seperated proxy module

--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -16,7 +16,8 @@
 
     <modules>
         <module>siva-webapp</module>
-    </modules>
+		<module>siva-validation-proxy</module>
+	</modules>
 
 	<properties>
 		<project.encoding>UTF-8</project.encoding>
