--- a/siva-parent/siva-validation-proxy/pom.xml
+++ b/siva-parent/siva-validation-proxy/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>siva-webapp</artifactId>
+    <artifactId>siva-validation-proxy</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
-            <artifactId>siva-validation-proxy</artifactId>
+            <artifactId>pdf-validator-webservice</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -25,15 +25,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
         </dependency>
     </dependencies>
 
