--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -84,6 +84,13 @@
 				<version>2.4</version>
 			</dependency>
 
+			<!-- Lombok for getters and setters -->
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.16.8</version>
+			</dependency>
+
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-beans</artifactId>
