--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -94,6 +94,11 @@
                 <artifactId>bootstrap</artifactId>
                 <version>4.0.0-alpha.2</version>
             </dependency>
+			<dependency>
+				<groupId>org.webjars.bower</groupId>
+				<artifactId>bootstrap-fileinput</artifactId>
+				<version>4.3.1</version>
+			</dependency>
 
 			<!-- Public Dependencies -->
 			<dependency>
