VAL-128 Renamed pdf-validator-webservice to pdf-validation-service and set max upload size for demo application to 10M

--- a/pdf-validator-parent/pdf-validation-service/pom.xml
+++ b/pdf-validator-parent/pdf-validation-service/pom.xml
@@ -10,7 +10,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>pdf-validator-webservice</artifactId>
+    <artifactId>pdf-validation-service</artifactId>
     <name>SK PDF Validator: Web Service</name>
 	<description>SK PDF Validator: Validator WSDL Web Service</description>
 
