--- a/siva-parent/siva-validation-proxy/pom.xml
+++ b/siva-parent/siva-validation-proxy/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
-            <artifactId>pdf-validator-webservice</artifactId>
+            <artifactId>pdf-validation-service</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
