--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -24,7 +24,7 @@
         <project.encoding>UTF-8</project.encoding>
         <language.level>1.8</language.level>
         <!--<spring.version>4.2.5.RELEASE</spring.version>-->
-        <spring.boot.version>1.4.0.SNAPSHOT</spring.boot.version>
+        <spring.boot.version>1.4.0.M2</spring.boot.version>
         <!--<slf4j.version>1.6.6</slf4j.version>-->
         <!--<logback-classic.version>1.0.13</logback-classic.version>-->
         <junit.version>4.12</junit.version>
@@ -78,6 +78,12 @@
                 <groupId>com.domingosuarez.boot</groupId>
                 <artifactId>spring-boot-starter-jade4j</artifactId>
                 <version>0.3.0</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>de.neuland-bfi</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>de.neuland-bfi</groupId>
@@ -202,6 +208,7 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
