--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -18,6 +18,7 @@
         <module>siva-webapp</module>
         <module>siva-validation-proxy</module>
         <module>siva-sample-application</module>
+        <module>siva-tsl-loader</module>
     </modules>
 
     <properties>
