VAL-155 Added modifications

--- a/siva-parent/siva-tsl-loader/src/main/resources/application.yaml
+++ b/siva-parent/siva-tsl-loader/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ trusted:
       tslRefreshPolicy: WHEN_NECESSARY_OR_INDETERMINATE
       fileCacheDirectory:
       scheduler:
-        cron: "0 0 3 * * ? *"
+        cron: "0 0 3 * * ?"
 
 keystore:
   type: JKS
