--- a/siva-parent/siva-validation-proxy/validation-services-parent/tsl-loader/pom.xml
+++ b/siva-parent/siva-validation-proxy/validation-services-parent/tsl-loader/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>siva-parent</artifactId>
+        <artifactId>validation-services-parent</artifactId>
         <groupId>eu.europa.ec.joinup.sd-dss</groupId>
         <version>2.0.1.SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>siva-tsl-loader</artifactId>
+    <artifactId>tsl-loader</artifactId>
 
     <dependencies>
         <dependency>
